--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reward Wheel</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reward Wheel</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Spin the Reward Wheel!</h1>
-    <div id="wheel-container">
-        <canvas id="wheel" width="400" height="400"></canvas>
-        <button id="spin-button">Spin!</button>
-    </div>
-    <div id="result"></div>
-    <script src="script.js"></script>
+  <div id="wheel"></div>
+  <button id="spin-button">Spin the Wheel!</button>
+  <script src="script.js"></script>
 </body>
 </html>
