--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="wheel"></div>
+  <div id="wheel-container">
+    <div id="wheel"></div>
+    <div id="pointer">▼</div>
+  </div>
   <button id="spin-button">Spin the Wheel!</button>
+  <div id="result"></div>
   <script src="script.js"></script>
 </body>
 </html>
